cmake_minimum_required(VERSION 3.17)
project(Algorithm_Design)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab2 Lab2.cpp)
add_executable(Test Test.cpp)
add_executable(Lab3_A Lab3_A.cpp)
add_executable(Lab3_B Lab3_B.cpp)
add_executable(Lab5_A Lab5_A.cpp)
add_executable(Lab5_B Lab5_B.cpp)
add_executable(Lab6_A Lab6_A.cpp)
add_executable(Lab6_B Lab6_B.cpp)
add_executable(Lab7_A Lab7_A.cpp)
add_executable(Lab7_B Lab7_B.cpp)
add_executable(Lab8_A Lab8_A.cpp)
add_executable(Lab8_B Lab8_B.cpp)
add_executable(Lab9_A Lab9_A.cpp)
add_executable(Lab9_B Lab9_B.cpp)
add_executable(Lab10_A Lab10_A.cpp)
add_executable(Lab10_B Lab10_B.cpp)
add_executable(Lab11_A Lab11_A.cpp)
add_executable(Lab11_B Lab11_B.cpp)
add_executable(Lab12_A Lab12_A.cpp)
add_executable(Lab12_B Lab12_B.cpp)
add_executable(Lab13_A Lab13_A.cpp)
add_executable(Lab13_B Lab13_B.cpp)
#add_executable(test2 test2.cpp)